# EventSystem

./: CMakeLists.txt  CMakePresets.json  README.md
Test_task/: CMakeLists.txt
Test_task/SQLite/: sqlite3.lib
Test_task/headers/: CommandHandler.h  DataBase.h  Event.h  EventGenerator.h  EventQueue.h  Logger.h  LoggerLevel0.h  LoggerLevel1.h  LoggerLevel2.h  LoggerThread.h  utils.h
Test_task/src/: CommandHandler.cpp  DataBase.cpp  EventGenerator.cpp  EventQueue.cpp  Logger.cpp  LoggerLevel0.cpp  LoggerLevel1.cpp  LoggerLevel2.cpp  LoggerThread.cpp  main.cpp  utils.cpp
